Fixed nav alignment, added theme section

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,24 @@ h2 {
   padding-left: 475px;
 }
 
+h3 {
+  color: white;
+  padding-right: 5px;
+}
+
+h3::before{
+  background-color: #111;
+}
+
+h3::after{
+  background-color: #9d5aa5;
+  border: 4px solid #f1f1f1;
+}
+
+h3.dark{
+  background-color:var(--bg-color);
+}
+
 body {
   background-color: var(--bg-color);
   background-size: 100% 100%;
@@ -43,10 +61,9 @@ body {
 /* Theme switch checkbox */
 .theme-checkbox {
   display: flex;
-  align-items: left;
-  position: fixed;
+  align-items: center;
+  position: relative;
   top: 4%;
-  left:90%;
   z-index: 2;
 }
 .theme-switch {
@@ -114,24 +131,27 @@ input:checked + .slider:before {
 .logo img {
   width: 75px;
   height: 75px;
-  margin-top: 16%;
-  text-align: center;
+  padding-top: 5px;
+  padding-left: 30px;
+  text-align: right;
+  position: relative;
 }
 
 .logo p {
   margin-top: -5%;
   font-size: 1.5rem;
-  text-align: center;
+  text-align: right;
   margin-left: -15%;
 }
 
 div.logo {
   float: left;
-  padding-right: 50px;
+  padding-right: 0px;
 }
 
 nav ul {
-  float: right;
+  float: left;
+  text-align: left;
   margin-right: 0px;
   margin: 10px;
 }
@@ -156,6 +176,27 @@ nav ul li a.active, nav ul li a:hover {
   transition: 0.5s;
 }
 
+nav ul li2 {
+  display: inline-block;
+  line-height: 80px;
+  margin: 0 5px;
+}
+
+nav ul li2 a {
+  color: white;
+  font-size: 25px;
+  font-weight: bold;
+  text-transform: uppercase;
+  padding: 7px 13px;
+  border-radius: 3px;
+  text-decoration: none;
+}
+/*
+nav ul li2 a.active, nav ul li2 a:hover {
+  background: #1b9bff;
+  transition: 0.5s;
+}
+*/
 .checkbtn {
   font-size: 30px;
   color: white;
@@ -191,6 +232,23 @@ nav ul li a.active, nav ul li a:hover {
   overflow: hidden;
   width: 450px;
   height: 450px;
+  position: relative;
+}
+
+.container1 {
+  margin: 0 auto;
+  background: linear-gradient(var(--primary-color) 15%, var(--secondary-color));
+  padding: 0px;
+  border-radius: 5px;
+  border: 2px solid black;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 10%;
+  margin-top: 10%;
+  overflow: hidden;
+  width: 300px;
+  height: 80px;
   position: relative;
 }
 
@@ -235,7 +293,7 @@ label {
   position: relative;
 }
 
-#button , #txt-button {
+button , #txt-button {
   margin: 10px;
   grid-column: span 2;
   background-color: transparent;
@@ -339,7 +397,7 @@ label {
 .inner-width{
   max-width: 1300px;
   margin: auto;
-  padding: 0 40px;
+  padding: 0 0px;
 }
 
 .section-title{
@@ -385,8 +443,8 @@ section.dark{
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  margin-top: 140px;
-  margin-bottom: 50px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .about{
